# hakaton-el-car

./: README.md
client/: package-lock.json  package.json
client/src/: App.js  index.scss
mobile_app/: pubspec.yaml
mobile_app/assets/: tessdata_config.json
mobile_app/ios/: Podfile
mobile_app/ios/Runner/: Info.plist
mobile_app/ios/Runner.xcodeproj/: project.pbxproj
mobile_app/lib/: main.dart
mobile_app/lib/components/: auth_button.dart  change_auth_type.dart  custom_text_field.dart  failed_widget.dart  standart_loading.dart
mobile_app/lib/components/boxes/: h_box.dart  w_box.dart
mobile_app/lib/core/builders/: entity_builder.dart
mobile_app/lib/core/constats/: color_constants.dart  http_constants.dart
mobile_app/lib/core/enums/: body_type_enum.dart
mobile_app/lib/core/errors/: exceptions.dart  failure.dart
mobile_app/lib/core/stores/: entity_store.dart  entity_store.g.dart  load_params.dart
mobile_app/lib/core/usecases/: usecase.dart
mobile_app/lib/features/cars_list/data/datasources/: register_car_datasource.dart  user_remote_data_source.dart
mobile_app/lib/features/cars_list/data/models/: car_model.dart  car_model.freezed.dart  car_model.g.dart  self_data_model.dart  self_data_model.freezed.dart  self_data_model.g.dart  user_model.dart  user_model.freezed.dart  user_model.g.dart
mobile_app/lib/pages/: authentication_page.dart  home_page.dart  user_page.dart
mobile_app/lib/services/: navigation.dart
mobile_app/lib/services/di/: locator_service.dart
mobile_app/lib/services/http/: rest_client.dart  rest_client.g.dart
mobile_app/lib/utilities/: accsess_token.dart  load_states.dart
server/: Cargo.toml
server/src/: db.rs  errors.rs  main.rs  prelude.rs  types.rs
server/src/routes/: mod.rs  route_types.rs
(+32 files in other folders)
