[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid              = { version = "1", features = ["serde"] }
tokio             = { version = "1.0", features = ["full"] }
tower-http        = { version = "0.3.0", features = ["cors"] }
serde_json        = { version = "1" }
serde             = { version = "1", default-features = false, features = ["derive"] }
dotenv            = "0.15"